ASM-2125 Refactor code to improve readability and remove unused imports across multiple classes